--- a/templates/Detail/Devis.html.twig
+++ b/templates/Detail/Devis.html.twig
@@ -1,32 +1,82 @@
 {# empty Twig template #}
-{% extends 'base.html.twig' %}
+{#{% extends 'base.html.twig' %}
 
-{% block page %}
+{% block page %}#} 
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset="UTF-8" />
+    <title>{% block title %}MyFrenchHub!{% endblock %}</title>
+	{% block stylesheets %}
+                   <link rel="stylesheet" type="text/css" href="css/devis.css " />
+                         <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css " /> 
+	{% endblock %}
+	<script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>
+</head>
+  <body >
+ {#                  <img src="img/logo-beige-grand.png" alt="Logo de MyFrenchHub">#}
+
+<div class="col-md-1"></div>
+        <div class="col-md-4">
+         <form action="/devisEnregistrement" method="post" role="form">
   
-    <section id="content">
-         <form action="/devisEnregistrement" method="post">
                         <h2> INFORMATION GENERAL </h2>
-                               <label for='societe'>Dénomination :</label>  <input type='text' name='societe' required><br>
-                               <label for="adress">Adress</label> :   <input type="text" name="adress" required >    <br>
-                               <label for="pays">pays</label> :   
-                               <select name="select">
-                                            {% for pays in nomPays %}
-                                                             <option value="value1">{{pays.nom_fr_fr}}</option> 
-                                            {% endfor%}
-                                  </select>
-                                <label for="siren">Siren</label> :   <input type="text" name="siren" >   
-                              
-                                <label for="siret">Siret</label> :   <input type="number" name="siret" >   <br>
-                                 <label for="description">Activité</label> : <textarea rows="3" cols="50" name="description" > </textarea>  <br>
-                                 <label for="forme">Forme juridique</label> :   <input type="text" name="forme" > <br>  
-                                  <label for="contact">Contact principal</label> :   <input type="text" name="contact" required >   <br>
-                                   <label for="fonction">Fonction</label> :   <input type="text" name="fonction" required>  <br> 
-                                   <label for="email">Email</label> :   <input type="email" name="email"  required><br>   
-                                    <label for="Tel">Tel</label> :   <input type="tel" name="tel" required>   <br>
-                         
-                           <label for="nbrSalarié">Nombre de salarié concerné</label> :   <input type="number" name="nbreSalarié" required>   <br>
+                                <div class="form-group">
+                                    <label for='societe'>Dénomination :</label>  <input type='text' name='societe' class="form-control" required>
+                                </div>
+                                <div class="form-group">
+                                    <label for="adress">Adresse</label> :   <input type="text" name="adress" class="form-control" required >   
+                                </div>
+                                <div class="form-group">
+                                    <label for="pays"class="col-xs-2 control-label">Pays :</label> 
+                                    <div class="col-xs-10 selectContainer">
+                                       <select name="select" class="form-control">
+                                                    {% for pays in nomPays %}
+                                                                     <option value="value1">{{pays.nom_fr_fr}}</option> 
+                                                    {% endfor%}
+                                       </select> 
+                                    </div>
+                                </div><br><br>
+                                      <div class="form-group">
+                                      <label for="siren">Siren</label> :   <input type="text" name="siren" class="form-control" >   
+                                      </div>
+                                          <div class="form-group">
+                                         <label for="siret">Siret</label> :   <input type="number" name="siret"class="form-control"  > 
+                                          </div>
+                                      <div class="form-group">
+                                         <label for="description">Activité</label> : <input type="text"  name="description" class="form-control" > 
+                                      </div>
+                                    <div class="form-group">
+                                             <label for="forme">Forme juridique</label> :   <input type="text" name="forme" class="form-control" >
+                                    </div>
+                                    <div class="form-group">
+                                          <label for="contact">Contact principal</label> :   <input type="text" name="contact"   class="form-control" required >   
+                                    </div>
+                                    <div class="form-group">
+                                           <label for="fonction">Fonction</label> :   <input type="text" name="fonction"   class="form-control" required> 
+                                    </div>
+                                   <div class="form-group">
+                                         <label for="email">Email</label> :   <input type="email" name="email"   class="form-control" required>
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="Tel">Tel</label> :   <input type="tel" name="tel"   class="form-control"required>   
+                                    </div>
+                                <label for="pays"class="col-xs-8 control-label">Nombres de salariés concernées :</label> 
+                                 <div class="col-xs-4 selectContainer">
+                                    <select name="select" class="form-control">
+                                                    <option value="value1">0 à 50</option> 
+                                                    <option value="value1">50 à 250</option> 
+                                                     <option value="value1">plus de 250</option> 
+                                    </select>
+                                 </div>
+                                            
+                                                     
+             </div>
+                                       <div class="col-md-1"></div>
+            <div class="col-md-4">
                            <h2>ASSISTANCE AU DEPART / ARRIVEE</h2>
-                           <input type="checkbox" name="option1" value="voyage"> Voyage d'orientation, reconnaissance<br>
+                            
+                               <input type="checkbox" name="option1" value="voyage"> Voyage d'orientation, reconnaissance<br>
                             <input type="checkbox" name="option2" value="demenagement" > Coordination du déménagement<br>
                             <input type="checkbox" name="option3" value="Assistance">Assistance au départ<br>
                             
@@ -50,11 +100,14 @@
                             <input type="checkbox" name="option14" value="enfant"> Enfants<br>
                             
                              <label for="description">Commentaire</label> : <textarea rows="3" cols="50" name="commentaire" > </textarea>  <br>
-                            
-                          <input type="submit" name="valider" value="valider">
+                            <div class="form-group">
+                                   <button type="submit" class="btn  btn-success" name="valider" >Valider</button>
+                            </div>
+             </div>
                                         
          </form>
-        
-    </section>
-    
-    {% endblock %}
+                                 
+   
+  </body>
+</html>
+{#    {% endblock %}#}
