--- a/templates/entreprise.html.twig
+++ b/templates/entreprise.html.twig
@@ -1,6 +1,72 @@
 {# empty Twig template #}
 {% extends 'base.html.twig' %}
-
+        {% block stylesheets %}
+            {{parent()}}|  <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css " /> 
+        {% endblock %}
 {% block page %}
     <h2>espace Entreprise</h2>
+    
+    <div class="col-md-1"></div>
+        <div class="col-md-4">
+            
+          <div class="form-group">
+                      <label for='societe'>Dénomination :</label>  <input type='text' name='societe' class="form-control" required>
+            </div>
+                    <div class="form-group">
+                        <label for="adress">Adresse</label> :   <input type="text" name="adress" class="form-control" required >   
+                    </div>
+                    <div class="form-group">
+                        <label for="pays"class="col-xs-2 control-label">Pays :</label> 
+                        <div class="col-xs-10 selectContainer">
+                           <select name="select" class="form-control">
+                                        {% for pays in nomPays %}
+                                                         <option value="value1">{{pays.nom_fr_fr}}</option> 
+                                        {% endfor%}
+                           </select> 
+                        </div>
+                    </div>
+                           
+                              
+       
+                          <div class="form-group">
+                          <label for="siren">Siren</label> :   <input type="text" name="siren" class="form-control" >   
+                          </div>
+                              <div class="form-group">
+                             <label for="siret">Siret</label> :   <input type="number" name="siret"class="form-control"  > 
+                              </div>
+                          <div class="form-group">
+                             <label for="description">Activité</label> : <input type="text"  name="description" class="form-control" > 
+                          </div>
+                         <div class="form-group">
+                              <label for="contact">Contact principal</label> :   <input type="text" name="contact"   class="form-control" required >   
+                        </div>
+                        <div class="form-group">
+                               <label for="fonction">Fonction</label> :   <input type="text" name="fonction"   class="form-control" required> 
+                        </div>
+                       <div class="form-group">
+                             <label for="email">Email</label> :   <input type="email" name="email"   class="form-control" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="Tel">Tel</label> :   <input type="tel" name="tel"   class="form-control"required>   
+                        </div>
+                    <label for="pays"class="col-xs-8 control-label">Nombres de salariés concernées :</label> 
+                    <div class="col-xs-4 selectContainer">
+                        <select name="select" class="form-control">
+                            <option value="value1">0 à 50</option> 
+                            <option value="value1">50 à 250</option> 
+                            <option value="value1">plus de 250</option> 
+                        </select>
+                    </div>
+                    
+                   </div>
+                </div>     
+                    
+                <div class="col-md-1"></div>
+                <div class="col-md-4"> 
+                    <h2>Liste des salariés</h2>
+                    
+                    <h2>Ajouter un salarie</h2>
+                </div>
+           
+                          
     {% endblock %}
