--- a/templates/Detail/Formation.html.twig
+++ b/templates/Detail/Formation.html.twig
@@ -1,6 +1,9 @@
 {% extends 'base.html.twig' %}
+{% block stylesheets %}
+       <link rel="stylesheet" type="text/css" href="../../css/style.css " />       
+   {% endblock %}
 {% block body %}
-<section id="community" class="content" data-id="active_content">
+ <section id="relocation" class="content" data-id="active_content">
     <h2>{{ titre}}</h2>
     <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -17,3 +20,7 @@
             <a href="/recontacter">être recontacter</a>
             </section>
  {% endblock %}
+ {% block javascripts %}
+         <script type="text/javascript" src="../../js/jquery-1.11.2.min.js"></script>
+         <script type="text/javascript" src="../../js/frenchHub.js"></script>
+{% endblock %}
