--- a/templates/Detail/Relocation.html.twig
+++ b/templates/Detail/Relocation.html.twig
@@ -1,7 +1,11 @@
 {# empty Twig template #}
 {% extends 'base.html.twig' %}
+{% block stylesheets %}
+       <link rel="stylesheet" type="text/css" href="../../css/style.css " />       
+      
+{% endblock %}
 {% block body %}
-<section id="community" class="content" data-id="active_content">
+ <section id="relocation" class="content" data-id="active_content">
     <h2>{{ titre}}</h2>
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit.
@@ -17,3 +21,7 @@
      <a href="/devis">Demande de devis</a>
      </section>
     {% endblock %}
+    {% block javascripts %}
+         <script type="text/javascript" src="../../js/jquery-1.11.2.min.js"></script>
+         <script type="text/javascript" src="../../js/frenchHub.js"></script>
+{% endblock %}
